# dioxus-agentic-afk

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  Dioxus.toml  bacon.toml  mise.toml  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml
apps/control-plane-server/: Cargo.toml
apps/control-plane-server/src/: abandon.rs  activity_publisher.rs  control_plane_events.rs  event_bus.rs  lib.rs  main.rs  project_event_publisher.rs  recover.rs  repair.rs  verify.rs
apps/control-plane-server/tests/: auto_replan.rs  boot_recovery.rs  control_plane_api.rs  issue_18_abandon.rs  issue_19_recover.rs  issue_22_verify.rs  issue_23_repair.rs  issue_24_activity.rs  issue_27_sse_backbone.rs  issue_31_query_param_resume.rs  issue_32_publishers.rs  plan_run_behaviors.rs  plan_run_claim.rs  plan_run_implement_review.rs  plan_run_merge.rs  plan_run_parallel.rs  plan_run_push_failure.rs  plan_run_re_enable.rs  plan_run_review_loop.rs  plan_run_sse.rs  plan_run_tracer.rs  prd_overrides.rs  sandbox_preflight.rs
apps/dashboard/: Cargo.toml  tailwind.css
apps/dashboard/src/: main.rs  project_store.rs  sse_client.rs
apps/dashboard/src/ui/: action_button.rs  card.rs  empty_state.rs  error_state.rs  key_value_list.rs  loading_skeleton.rs  mod.rs  status_pill.rs  toast_region.rs
crates/contracts/: Cargo.toml
crates/git-summary/: Cargo.toml
crates/orchestrator/: Cargo.toml
crates/orchestrator/prompts/plan-run/: README.md  implement.md  merge.md  plan.md  review.md
crates/orchestrator/runtime/: Dockerfile  entrypoint.sh
crates/orchestrator/src/: abandon.rs  auto_replan.rs  boot_container_sweeper.rs  boot_recovery_scanner.rs  codex_runner.rs  coordinator.rs  implementation_phase.rs  in_flight_phase_tracker.rs  lib.rs  merge_phase.rs  plan_run.rs  plan_run_finalize.rs  plan_run_status.rs  planning_phase.rs  production.rs  push_attempt.rs  re_enable_source_issue.rs  recover.rs  repair.rs  review_loop.rs  sandbox.rs  shutdown_coordinator.rs  verify.rs
crates/orchestrator/tests/: docker_smoke.rs  sandbox_codex_runner.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 0001_create_projects.sql  0002_create_issue_sources.sql  0003_create_planning_snapshots.sql  0004_add_lifecycle_status.sql  0005_add_project_trusted.sql  0006_create_issue_assignments.sql  0007_add_assignment_attempt_process_identity.sql  0008_add_assignment_change_proposals.sql  0009_create_project_activity.sql  0010_allow_branch_reuse_after_abandonment.sql  0012_add_repair_budget.sql  0014_release_active_assignment_slot_on_verify.sql  0015_create_plan_runs.sql  0016_nest_assignments_under_plan_run.sql  0017_attribute_phase_outputs_to_assignments.sql  0018_review_loop_retry_state.sql  0019_drop_proposal_columns.sql  0020_assignment_status_check_merge_staged.sql  0021_block_reason_kind.sql  0022_create_project_prd_overrides.sql  0023_auto_replan.sql  0024_in_flight_phase_rows.sql  0025_normalize_plan_run_state.sql
crates/persistence/src/: abandon.rs  activity.rs  auto_replan.rs  lib.rs  plan_run.rs  prd_overrides.rs  recover.rs  repair.rs  verify.rs
crates/planning-snapshot/: Cargo.toml
docs/adr/: 0001-use-a-split-rust-workspace.md  0002-use-client-side-dioxus-with-an-axum-api.md  0003-use-sqlite-for-local-control-plane-persistence.md  0004-seed-the-current-repo-only-for-development.md  0005-accept-explicit-local-project-paths-for-boilerplate.md  0006-keep-the-control-plane-local-only.md  0007-serve-compiled-dashboard-assets-from-the-server.md  0008-include-a-thin-local-cli.md  0009-name-the-cli-agentic-afk.md  0010-use-api-prefix-for-json-routes.md  0011-include-openapi-and-scalar-from-the-start.md  0012-use-a-shared-contracts-crate.md  0013-use-uuids-for-project-identity.md  0014-derive-git-summary-from-project-paths.md  0015-use-minimal-environment-configuration.md  0016-use-tailwind-with-local-dioxus-components.md  0017-include-playwright-foundation-for-e2e-testing.md  0018-use-mise-for-tooling-and-tasks.md  0019-add-minimal-ci-from-day-one.md  0020-run-from-source-during-boilerplate-phase.md  0021-use-explicit-workspace-crates.md  0022-use-sqlx-for-sqlite-persistence.md  0023-use-rfc-7807-problem-json-for-api-errors.md  0024-start-with-project-focused-dashboard-routes.md  0025-use-source-authoritative-issue-workflow.md  0026-use-project-instructions-for-agent-execution-policy.md  0027-build-issue-source-planning-before-agent-execution.md  0028-use-worktrunk-for-assignment-worktrees.md  (+17 more)
(+43 files in other folders)
