[package]
name = "agentic-afk-control-plane-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agentic-afk"
path = "src/main.rs"

[dependencies]
agentic-afk-contracts.workspace = true
agentic-afk-git-summary.workspace = true
agentic-afk-orchestrator.workspace = true
agentic-afk-persistence.workspace = true
agentic-afk-planning-snapshot.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true

[dev-dependencies]
http-body-util.workspace = true
sqlx.workspace = true
tower.workspace = true
