[package]
name = "agentic-afk-dashboard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentic-afk-contracts.workspace = true
dioxus = { version = "=0.7.9", features = ["web", "router"] }
gloo-net = "0.6.0"
serde_json.workspace = true
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.82", features = ["Event", "EventSource", "EventSourceInit", "Location", "MessageEvent", "Window"] }
