[package]
name = "agentic-afk-orchestrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentic-afk-contracts.workspace = true
agentic-afk-persistence.workspace = true
agentic-afk-planning-snapshot.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
