[package]
name = "agentic-afk-persistence"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentic-afk-contracts.workspace = true
agentic-afk-planning-snapshot.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
